--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     
     <!--inizio titolo-->
     <header>
-
+      <h1><strong>Il mio viaggio a Londra </strong></h1>
+      <img src="img./pexels-bill-emrich-230794-0.jpg" alt="skyline Londra">
+      <img src="img./pexels-bill-emrich-230794-1.jpg" alt="skyline Londra">
+      <img src="img./pexels-bill-emrich-230794-2.jpg" alt="skyline Londra">
+        <hr>
     </header>
     <!--fine titolo-->
 
