--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <!--inizio titolo-->
     <header>
-      <h1><strong>Il mio viaggio a Londra </strong></h1>
+      <h1>Il mio Viaggio a Londra</h1>
       <img src="img./pexels-bill-emrich-230794-0.jpg" alt="skyline Londra">
       <img src="img./pexels-bill-emrich-230794-1.jpg" alt="skyline Londra">
       <img src="img./pexels-bill-emrich-230794-2.jpg" alt="skyline Londra">
@@ -20,7 +20,68 @@
 
     <!--inizio capitolo-->
     <main>
+        <h2>Le mie spese</h2>
+        <table>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr> 
+            <tr>
+                <th>1</th>
+                <th>Biglietto Aereo</th>
+                <th>120€</th>
+            </tr>
+            <tr>
+                <th>1</th>
+                <th>Biglietto Aereo</th>
+                <th>120€</th>
+            </tr>
+            <tr>
+                <th>1</th>
+                <th>Biglietto Aereo</th>
+                <th>120€</th>
+            </tr>
+            <tfoot>
+                <td>Totale</td>
+                <td></td>
+                <td>360€</td>
+            </tfoot>
+        </table>
+        <hr>
 
+        <h2>Cose da fare</h2>
+        <ul>
+            <li>Visitare la Tower of London &cross;</li>
+            <li>Visitare greenwich &checkmark;</li>
+            <li>Ascoltare un atrista di strada a Covent Grarden &checkmark;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+        </ul>
+        <hr>
+
+        <h2>Info utili:</h2>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numeropolizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                    <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
+                    <li><strong>Volo di ritorno:</strong> Y1236X, ore 18.30 da London Heathrow</li>
+                </ul>
+            </li>
+        </ol>
+        <hr>
     </main>
     <!--fine capitolo-->
 
